readMe update
readme discription for vm